# animeflv-api

./: .gitignore  .travis.yml  LICENSE  README.md  TODO  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: python-package.yml
animeflv/: __init__.py  animeflv.py  exception.py
